--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    
+    <div class="main-container">
+        <label class="instructions" for="numGrids">Please enter number between 1 and 100 (rows * columns):</label>
+        <input type="number" name="number of Grids" id="input-box" value="50">
+        <button onclick=buttonClick() class="create-grid">Reset Game</button>
+    </div>
+    
     <div class="grid-container"></div>
 
 
