Fix grid-container display for invalid numbers

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>Etch-A-Sketch!</h1>
     <div class="main-container">
-        <label class="instructions" for="numGrids">Please enter number between 1 and 100 (rows * columns):</label>
+        <label class="instructions" for="numGrids">Enter number between 1 and 100 (rows * columns):</label>
         <input type="number" name="number of Grids" id="input-box" value="50">
         <button onclick=buttonClick() class="create-grid">Reset Game</button>
     </div>
