--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Etch-A-Sketch</title>
+    <title>✏️ Etch-A-Sketch</title>
     <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
     <h1>Etch-A-Sketch!</h1>
