--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
     
     <div class="grid-container"></div>
 
+    <div class="footer-container">
+        <div class="footer">Copyright @ theeugenekim 2022</div>
+    </div>
 
     <script src="etch-a-sketch.js"></script>
-
 
 </body>
 </html>
