Change copyright symbol in footer

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="grid-container"></div>
 
     <div class="footer-container">
-        <div class="footer">Copyright @ theeugenekim 2022</div>
+        <div class="footer">Copyright © theeugenekim 2022</div>
     </div>
 
     <script src="etch-a-sketch.js"></script>
